styles.css
body {
    display: flex;
    flex-direction: column;
    margin: 0;
    justify-content: space-between;
    min-height: 100vh;
    
}

.header {
    display: flex;
    flex: 0 0 auto;
    justify-content: space-between;
    margin: 24px 48px;
}

img {
    max-width: 100%;
}

.logo {
    width: 100px;
    height: auto;
    flex-shrink: 0;
}


.link {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    padding: 0;
    margin: 0;
    list-style: none;
}

.container {
    display: flex;
    justify-content: space-between;
    gap: 10px;
    margin: 24px 48px;
}

h1, p {
    margin: 0;
    padding: 0;
}

.left {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    width: 300px;
}

.right {
    display: flex;
    flex-shrink: 0;
    width: 300px;
    height: 200px;
}

.button {
    background-color: #3882F6;
    color: white;
    border-radius: 5px;
    width: 100px;
    height: 25px;
    border: none;
    padding: 0;
}

.main {
    display: flex;
    flex-direction: column;
    
    align-items: center;
    flex: 1;
}

.image {
    width: 200px;
    height: 100px;
}

.attributes {
    display: flex;
    gap: 20px;
}

.footer {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    
}

